# NapCap-Magic-Cli

./: .gitignore  README.md  pyproject.toml
scripts/: remove.sh  remove_docker.sh  remove_shell.sh
src/scripts/: napcat-install-linux.py  napcat-install.py
