[project]
name = "NapCat-Magic-Cli"
version = "0.1.0"
description = "NapCat-Magic-Cli"
authors = [
    { name = "MliKiowa", email = "nanaeonn@outlook.com" },
    { name = "HeartfeltJoy", email = "2550419068@qq.com" },
]
dependencies = [
    "httpx>=0.27.2",
    "click>=8.1.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "BSD 2-Clause" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.black]
line-length = 120
target-version = ['py312']


[tool.isort]
known_first_party = ["NapCatQQ-Desktop"]
profile = "black"  # 兼容 black
line_length = 120  # 将行长度设置为与 black 一致
length_sort = true  # 按导入语句的长度进行排序

import_heading_stdlib = "标准库导入"
import_heading_thirdparty = "第三方库导入"
import_heading_firstparty = "项目内模块导入"
